Feat: Enhance UnauthorizedHandlerJwt to return JSON error response for unauthorized access