@@ -14,13 +14,24 @@ import org.springframework.stereotype.Component;
 @Component
 public class UnauthorizedHandlerJwt implements AuthenticationEntryPoint {
 
-  private static final Logger logger = LoggerFactory.getLogger(UnauthorizedHandlerJwt.class);
+	private static final Logger logger = LoggerFactory.getLogger(UnauthorizedHandlerJwt.class);
 
-  @Override
-  public void commence(HttpServletRequest request, HttpServletResponse response, AuthenticationException authException)
-      throws IOException {
-    logger.info("Unauthorized error: {}", authException.getMessage());
+	@Override
+	public void commence(
+		HttpServletRequest request, HttpServletResponse response,
+		AuthenticationException authException
+	) throws IOException {
+		logger.info("Unauthorized error: {}", authException.getMessage());
 
-    response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "message: %s, path: %s".formatted(authException.getMessage(), request.getServletPath()));
-  }
+		String errorMessage = String.format(
+			"{\"status\": %d, \"error\": \"Unauthorized\", \"message\": \"%s\", \"path\": \"%s\"}",
+			HttpServletResponse.SC_UNAUTHORIZED,
+			authException.getMessage(),
+			request.getServletPath()
+		);
+		
+		response.setContentType("application/json");
+		response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+		response.getWriter().write(errorMessage);
+	}
 }
